--- a/VsmdWorkstation/html/css/tubeGrid.css
+++ b/VsmdWorkstation/html/css/tubeGrid.css
@@ -8,6 +8,12 @@
     margin-top: 5px;
     text-align: center;
 }
+.grid-header{
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    margin-left: 5px;
+}
 .grid-cell{
     height: 20px;
     width: 20px;
