--- a/VsmdWorkstation/html/css/boardSetting.css
+++ b/VsmdWorkstation/html/css/boardSetting.css
@@ -2,3 +2,16 @@
     text-align: center;
     margin-top: 10px;
 }
+.centerAlignText{
+    margin-top: 10px;
+}
+.input1{
+    width: 70% !important;
+    display: inline-block !important;
+}
+.marginTop10px{
+    margin-top: 10px;
+}
+.titleLabel{
+    text-align: right;
+}
