--- a/VsmdWorkstation/html/css/tubeGrid.css
+++ b/VsmdWorkstation/html/css/tubeGrid.css
@@ -29,7 +29,7 @@
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    border: 2px solid silver;
+    border: 2px solid #6699CC;
     display: inline-block;
     margin-left: 5px;
 
@@ -47,7 +47,7 @@
 }
 
 .grid-cell.selected {
-    background-color: #ddd;
+    background-color: #FF9966;
 }
 .select-box-dashed {
     position: absolute;
@@ -63,4 +63,7 @@
     font-size: 0px;
     z-index: 99999;
     pointer-events: none;
+}
+.moveDone{
+    background-color: #0099CC !important;
 }
