--- a/VsmdWorkstation/html/css/tubeGrid.css
+++ b/VsmdWorkstation/html/css/tubeGrid.css
@@ -34,6 +34,9 @@
     margin-left: 5px;
 
 }
+.grid-cell.flickerColor{
+    background-color: blue !important;
+}
 .table>tbody>tr>td{
     padding: 0 !important;
     border-top: 0 !important;
